--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">iSonidos</string>
     <string name="sonido01">mario_coin</string>
+    <string name="video01">mario_jump</string>
 </resources>
